thêm dependence